# Demo-For-CUTE

./: CMakeLists.txt  README.md
01-Layout_for_CUTE/: layout  layout.cu
02-Algebra_and_Geometry_Explanation_for_CUTE/: a.out  algebra.cu
1_Layout_for_CUTE/: a.out  layout.cu
